js262/test/language/statements/class/elements/syntax/early-errors/grammar-privatename-whitespace-error-gen-meth.js


/*---
description: No space allowed between sigil and IdentifierName (Generator Method) (class declaration)
esid: prod-ClassElement
features: [generators, class-methods-private, class]
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Updated Productions

    ClassElementName :
      PropertyName
      PrivateName

    PrivateName ::
      # IdentifierName

---*/


$DONOTEVALUATE();

class C {
  * # m() {}
}
